# typed-prompt

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  publish.yml
examples/: user.py
src/typed_prompt/: __init__.py
tests/: test_typed_prompt.py
